# UniView-sync-watch-platform

./: .gitignore  Dockerfile  README.md  aaaa.html  alembic.ini  config.py  docker-compose.yml  main.py  package-lock.json  pyproject.toml  scr.js  simple server.py  temp_env  ИП диаграммы.docx  ТЗ ИП.docx
chat/: admin.py  consumers.py  models.py  routing.py  tasks.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_initial.py  0003_alter_chat_id.py  0004_alter_message_id.py  0005_alter_message_chat_id.py
core/: __init__.py  asgi.py  celery.py  form.py  forms.py  settings.py  tasks.py  urls.py  utils.py
custom_user/: __init__.py  models.py
custom_user/migrations/: 0001_initial.py
migrations/: env.py
migrations/versions/: 6f5ab456f2e9_added_tables.py
room/: admin.py  models.py  urls.py  views.py
room/migrations/: 0001_initial.py  0002_alter_room_id.py
src/: bot_api.py  db.py  jwt_utils.py  manager.py  middleware.py  models.py  routes.py  schemas.py  sheduler.py  smtp_module.py
src/logger/: formatter.py  logging_congig.py
src/parsers/: rutube_parser.py  vk_parser.py
src/template_emails/: invite_email.html  invite_email_repiat.html  reset_password_email.html
src/views/: auth_view.py  event_view.py  friend_view.py  message_view.py  room_view.py  user_view.py  video_view.py  view_room.py
src/ws/: ws_action.py  ws_chat.py  ws_share_video.py  ws_video.py
static/images/: where.avif
static/js/chat/: action.js  chat.js  video.js
static/js/rooms/: room.js
static/js/video/: observerDisplayState.js  videoController.js
static/room/styles/: style.css
templates/: base.html
templates/chat/: chat_room.html
templates/django_registration/: registration_complete.html  registration_form.html
templates/registration/: login.html  logout.html
templates/room/: custom_room.html  room_index.html
uniview-front/: Dockerfile  README.md  index.html  invite_email.html  invite_email_repiat.html  package-lock.json  package.json  reset_password_link.html  vite.config.js
uniview-front/src/: App.vue  main.js  utils.js
uniview-front/src/assets/: main.css
uniview-front/src/router/: index.js
uniview-front/src/stores/: roomStore.js  themeStore.js  (+1 more)
video/: admin.py  forms.py  models.py  urls.py  views.py
video/migrations/: 0001_initial.py  0002_alter_video_id.py
(+31 files in other folders)
