[project]
name = "backend-individual-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Liro"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "sqlalchemy (==2.0.38)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "alembic (==1.14.1)",
    "asyncpg (==0.30.0)",
    "fastapi (==0.115.10)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "bcrypt (==4.0.1)",
    "asyncmy (>=0.2.10,<0.3.0)",
    "yt-dlp (>=2025.3.31,<2026.0.0)",
    "selenium (>=4.30.0,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "selenium-wire (>=5.1.0,<6.0.0)",
    "blinker (==1.7.0)",
    "setuptools (>=78.1.0,<79.0.0)",
    "pytube (>=15.0.0,<16.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
