[project]
name = "backend-individual-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Liro"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "sqlalchemy (==2.0.38)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "asyncpg (==0.30.0)",
    "fastapi (==0.115.10)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "bcrypt (==4.0.1)",
    "setuptools (>=78.1.0,<79.0.0)",
    "ffmpeg-python (>=0.2.0,<0.3.0)",
    "aiohttp (>=3.11.18,<4.0.0)",
    "aiosmtplib (>=4.0.1,<5.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "undetected-playwright-patch (>=1.40.0.post1700587210000,<2.0.0)",
    "undetected-playwright (>=0.3.0,<0.4.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
